style.css
/* ... */
.skill-icon-individual{
    justify-content: left;
    align-items: left;
    text-align: center;
}
.skill-icon-individual img {
    height: auto;
    filter: brightness(0) invert(1);
    margin-top: 10px;
}
.skill-icon-individual h4{
    font-size: 18px;
}
    .vertical-line {
        border-left: 2px solid #f5f5f5;
        margin: 20px 20px; 
    }
.other-skill {
    width: 500px;
    padding-left: 15px;
    padding: 0;
}
.other-skill h4 {
    margin-top: 25px;
}

/*Project Section*/
.projects {
    display: flex;
    flex-direction: row;
    gap: 20px;
}
.individual-projects {
    display: flex;
    background-color: rgba(46, 46, 48, 0.25);
    border: solid rgba(128,128,128, 0.25);
    border-radius: 30px;
    height: auto;
    flex-direction: column;
    overflow: hidden;
    animation: fadeUp linear;
    animation-timeline:view();
    animation-range: entry 0% cover 40%;
}
.individual-projects img {
    display: flex;
    height: auto;
    flex-direction: column;
}
.project-descriptions {
    padding: 20px;
}
.project-descriptions h3 {
    font-size: 20px;
    margin-bottom: 10px;
}
.project-descriptions p {
    text-align: justify;
}
.tags {
    display: flex;
    flex-direction: row;
    gap: 6px;
    padding:10px;
}
.tags h4 {
    background-color: #c51d34;
    border-color: 1px solid #c51d34;
    border-radius: 5px;
    font-size: 12px;
    padding: 3px 8px 3px 8px;
    margin: 5px 0 5px 5px;
    box-sizing: border-box;
}
.individual-projects .button-type2 {
    width: 125px;
    padding: 5px 10px 5px 10px;
    border-radius: 15px;
    margin: 0 0 10px 10px;
    font-size: 20px;
}
/*Contact Section*/
.contactme {
    display: flex;
    flex-direction: row;
    margin: 10px 10px 100px 10px;
    gap: 70px;
    justify-content: center;
    width: 100%;
}
.contact-account {
    display: flex;
    flex-direction: column;
    justify-content: left;
    gap: 10px;
}
.contact-account h3 {
    animation: fadeUp linear;
    animation-timeline:view();
    animation-range: entry 0% cover 30%;
}
.individual-link-container{
    display: flex;
    align-items: center;
    width: 100%;
    justify-content: center;
    animation: fadeUp linear;
    animation-timeline:view();
    animation-range: entry 0% cover 30%;
}

.individual-link-container a{
    flex-direction: row;
    display: flex;
    width: 300px;
    background-color: rgba(46, 46, 48, 0.25);
    border: solid rgba(128,128,128, 0.25);
    border-radius: 30px;
    padding: 10px 0 10px 10px;
    gap: 15px;
    align-items: center;
}
.individual-link-container h4 {
    font-size: 20px;
}
.individual-link-container img {
    filter: brightness(0) invert(1);
    width: 50px;
    height: auto;
}
.contact-form {
    background-color: rgba(46, 46, 48, 0.25);
    border: solid rgba(128,128,128, 0.25);
    border-radius: 30px;
    display: flex;
    flex-direction: column;
    align-items: center;
    animation: fadeUp linear;
    animation-timeline:view();
    animation-range: entry 0% cover 30%;
}
input, textarea {
    margin-top: 10px;
    display: flex;
    flex-direction: column;
    background-color: rgba(46, 46, 48, 0.25);
    border: solid rgba(128,128,128, 0.25);
    border-radius: 30px;
    height: 50px;
    color: #f5f5f5;
    font-family: "Poppins", sans-serif;
    font-weight: 500;
    font-style: normal;
    color: #f5f5f5;
    padding-left: 10px;
}
textarea {
    height: 130px;
    padding-top: 10px;
    margin-bottom: 10px;
}
 form .button-type2 {
    font-size: 20px;
    text-align: center;
    padding: 5px 10px 5px 10px;
    border-radius: 15px;
 }
/*Scroll Animations*/
@keyframes fadeUp {
    from{
        opacity: 0;
        transform: translateY(40px) scale(0.5);
    }
    to{
        opacity: 1;
        transform: translateY(0) scale(1);
    }
}
/* ... */

